--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.9",
     "zod": "^3.23.6"
