--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.9",
     "zod": "^3.23.6"
   },
