--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@phosphor-icons/react": "^2.1.5",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "immer": "^10.1.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
